--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,6 +6,7 @@ const path = Astro.url.pathname;
 ---
 
 <script defer src="https://cloud.umami.is/script.js" data-website-id="16086169-84fd-463a-89d3-b1422a1af5f7"></script>
+<link rel="icon" type="image/png" href="/favicon.png">
 
 <nav>
   <a class="site-title" href="/">{name}</a>
