--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,5 +119,5 @@ const { Content: About } = await render(about!);
 		</Card>
 	</div>
 </Layout>
-<div id="wcb" class="carbonbadge"></div>
+<div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
