--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import { name } from 'spectre:globals';
 const path = Astro.url.pathname;
 ---
 
-<script defer src="https://cloud.umami.is/script.js" data-website-id="16086169-84fd-463a-89d3-b1422a1af5f7"></script>
+<script defer src="https://umami.duplicake.fyi/notatrackingscriptlol" data-website-id="43e01e03-7197-44f1-b0b4-bdcf27f301b4"></script>
 <link rel="icon" type="image/png" href="/favicon.png">
 
 <nav>
